-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.3.0
-
Run sanity on vm nodes
-
3
-
4466
This is lustre-b2_3 build #2
When I run sanity on vm nodes with USE_OFD=yes, LOAD_MODULES_REMOTE=true
Sanity test 130a hit an ASSERTION on the OSS.
Lustre: DEBUG MARKER: == sanity test 130a: FIEMAP (1-stripe file) == 08:29:35 (1346081375)
LustreError: 12629:0:(dt_object.h:1117:dt_fiemap_get()) ASSERTION( d->do_body_ops->dbo_fiemap_get ) failed:
LustreError: 12629:0:(dt_object.h:1117:dt_fiemap_get()) LBUG
Pid: 12629, comm: ll_ost00_006
Call Trace:
[<ffffffffa0fe1905>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
[<ffffffffa0fe1f17>] lbug_with_loc+0x47/0xb0 [libcfs]
[<ffffffffa0e5c27c>] ofd_get_info+0x9fc/0xa40 [ofd]
[<ffffffffa0e370be>] ost_get_info+0x43e/0x9c0 [ost]
[<ffffffffa0e3e4af>] ost_handle+0x1a8f/0x4850 [ost]
[<ffffffffa0ff2561>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
[<ffffffffa0fee364>] ? libcfs_id2str+0x74/0xb0 [libcfs]
[<ffffffffa067885d>] ptlrpc_server_handle_request+0x40d/0xea0 [ptlrpc]
[<ffffffffa0fe265e>] ? cfs_timer_arm+0xe/0x10 [libcfs]
[<ffffffffa066fdf7>] ? ptlrpc_wait_event+0xa7/0x2a0 [ptlrpc]
[<ffffffffa0ff2561>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
[<ffffffff810533f3>] ? __wake_up+0x53/0x70
[<ffffffffa0679e49>] ptlrpc_main+0xb59/0x1860 [ptlrpc]
[<ffffffffa06792f0>] ? ptlrpc_main+0x0/0x1860 [ptlrpc]
[<ffffffff8100c14a>] child_rip+0xa/0x20
[<ffffffffa06792f0>] ? ptlrpc_main+0x0/0x1860 [ptlrpc]
[<ffffffffa06792f0>] ? ptlrpc_main+0x0/0x1860 [ptlrpc]
[<ffffffff8100c140>] ? child_rip+0x0/0x20
Kernel panic - not syncing: LBUG
Pid: 12629, comm: ll_ost00_006 Tainted: P --------------- 2.6.32-279.5.1.el6_lustre.g7ed1de9.x86_64 #1
Call Trace:
[<ffffffff814fd58a>] ? panic+0xa0/0x168
[<ffffffffa0fe1f6b>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
[<ffffffffa0e5c27c>] ? ofd_get_info+0x9fc/0xa40 [ofd]
[<ffffffffa0e370be>] ? ost_get_info+0x43e/0x9c0 [ost]
[<ffffffffa0e3e4af>] ? ost_handle+0x1a8f/0x4850 [ost]
[<ffffffffa0ff2561>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
[<ffffffffa0fee364>] ? libcfs_id2str+0x74/0xb0 [libcfs]
[<ffffffffa067885d>] ? ptlrpc_server_handle_request+0x40d/0xea0 [ptlrpc]
[<ffffffffa0fe265e>] ? cfs_timer_arm+0xe/0x10 [libcfs]
[<ffffffffa066fdf7>] ? ptlrpc_wait_event+0xa7/0x2a0 [ptlrpc]
[<ffffffffa0ff2561>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
[<ffffffff810533f3>] ? __wake_up+0x53/0x70
[<ffffffffa0679e49>] ? ptlrpc_main+0xb59/0x1860 [ptlrpc]
[<ffffffffa06792f0>] ? ptlrpc_main+0x0/0x1860 [ptlrpc]
[<ffffffff8100c14a>] ? child_rip+0xa/0x20
[<ffffffffa06792f0>] ? ptlrpc_main+0x0/0x1860 [ptlrpc]
[<ffffffffa06792f0>] ? ptlrpc_main+0x0/0x1860 [ptlrpc]
[<ffffffff8100c140>] ? child_rip+0x0/0x20
Initializing cgroup subsys cpuset
Initializing cgroup subsys cpu
Linux version 2.6.32-279.5.1.el6_lustre.g7ed1de9.x86_